fixed fighter API

--- a/app/composer.json
+++ b/app/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "iu-msis/project-triage",
+    "name": "iu-msis/Team22FInalProject",
     "description": "An in-class example project",
     "license": "private",
     "authors": [{
